--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Youtube Clone</title>
+    <title>Galleria</title>
     <link href="/src/App.css" rel="stylesheet" />
+    <link rel="icon" href="/public/favicon-32x32.png" sizes="any" />
+    <link rel="icon" href="/public/favicon-16x16.png" type="image/svg+xml" />
+    <link
+      rel="icon"
+      href="/public/android-chrome-192x192.png"
+      type="image/svg+xml"
+    />
+    <link
+      rel="icon"
+      href="/public/android-chrome-512x512.png"
+      type="image/svg+xml"
+    />
+    <link rel="apple-touch-icon" href="/public/apple-touch-icon.png" />
+    <link rel="manifest" href="/public/site.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
